# ocr_translate-paddle

./: pyproject.toml
.github/workflows/: cd.yml  ci.yml
ocr_translate_paddle/: __init__.py  plugin.py
tests/: conftest.py  settings.py  test_envmixin.py  test_paddle_box.py  test_paddle_ocr.py
tests/test_paddle_box/: test_intersection_merge.yml
