[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "ocr_translate-paddle"
dynamic = ["version"] # read from ocr_translate_paddle/__init__.py
description = "Plugins to enable usage of PaddleOCR in ocr_translate"
authors = []
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["django", "translation"]
requires-python = ">=3.12"
# ocr_translate-paddle==0.2.2
# ├── django-ocr_translate [required: >=0.5.0,<1.0, installed: 0.7.0]
# │   ├── wheel [required: ~=0.45.1, installed: 0.45.1]
# │   ├── setuptools [required: ~=80.9.0, installed: 80.9.0]
# │   ├── numpy [required: ~=2.2.6, installed: 2.2.6]
# │   ├── Django [required: ~=5.2.4, installed: 5.2.4]
# │   │   ├── asgiref [required: >=3.8.1, installed: 3.9.1]
# │   │   ├── sqlparse [required: >=0.3.1, installed: 0.5.3]
# │   │   └── tzdata [required: Any, installed: 2025.2]
# │   ├── django-cors-headers [required: ~=4.7.0, installed: 4.7.0]
# │   │   ├── asgiref [required: >=3.6, installed: 3.9.1]
# │   │   └── Django [required: >=4.2, installed: 5.2.4]
# │   │       ├── asgiref [required: >=3.8.1, installed: 3.9.1]
# │   │       ├── sqlparse [required: >=0.3.1, installed: 0.5.3]
# │   │       └── tzdata [required: Any, installed: 2025.2]
# │   ├── pillow [required: ~=11.3.0, installed: 11.3.0]
# │   └── opencv-python-headless [required: ~=4.12.0.88, installed: 4.12.0.88]
# │       └── numpy [required: >=2,<2.3.0, installed: 2.2.6]
# ├── numpy [required: Any, installed: 2.2.6]
# ├── paddleocr [required: Any, installed: 3.1.0]
# │   ├── paddlex [required: >=3.1.0, installed: 3.1.3]
# │   │   ├── chardet [required: Any, installed: 5.2.0]
# │   │   ├── colorlog [required: Any, installed: 6.9.0]
# │   │   │   └── colorama [required: Any, installed: 0.4.6]
# │   │   ├── filelock [required: Any, installed: 3.18.0]
# │   │   ├── huggingface-hub [required: Any, installed: 0.34.3]
# │   │   │   ├── filelock [required: Any, installed: 3.18.0]
# │   │   │   ├── fsspec [required: >=2023.5.0, installed: 2025.7.0]
# │   │   │   ├── packaging [required: >=20.9, installed: 25.0]
# │   │   │   ├── PyYAML [required: >=5.1, installed: 6.0.2]
# │   │   │   ├── requests [required: Any, installed: 2.32.4]
# │   │   │   │   ├── charset-normalizer [required: >=2,<4, installed: 3.4.2]
# │   │   │   │   ├── idna [required: >=2.5,<4, installed: 3.10]
# │   │   │   │   ├── urllib3 [required: >=1.21.1,<3, installed: 2.5.0]
# │   │   │   │   └── certifi [required: >=2017.4.17, installed: 2025.7.14]
# │   │   │   ├── tqdm [required: >=4.42.1, installed: 4.67.1]
# │   │   │   │   └── colorama [required: Any, installed: 0.4.6]
# │   │   │   └── typing_extensions [required: >=3.7.4.3, installed: 4.14.1]
# │   │   ├── numpy [required: >=1.24, installed: 2.2.6]
# │   │   ├── packaging [required: Any, installed: 25.0]
# │   │   ├── pandas [required: >=1.3, installed: 2.3.1]
# │   │   │   ├── numpy [required: >=1.26.0, installed: 2.2.6]
# │   │   │   ├── python-dateutil [required: >=2.8.2, installed: 2.9.0.post0]
# │   │   │   │   └── six [required: >=1.5, installed: 1.17.0]
# │   │   │   ├── pytz [required: >=2020.1, installed: 2025.2]
# │   │   │   └── tzdata [required: >=2022.7, installed: 2025.2]
# │   │   ├── pillow [required: Any, installed: 11.3.0]
# │   │   ├── prettytable [required: Any, installed: 3.16.0]
# │   │   │   └── wcwidth [required: Any, installed: 0.2.13]
# │   │   ├── py-cpuinfo [required: Any, installed: 9.0.0]
# │   │   ├── pydantic [required: >=2, installed: 2.11.7]
# │   │   │   ├── annotated-types [required: >=0.6.0, installed: 0.7.0]
# │   │   │   ├── pydantic_core [required: ==2.33.2, installed: 2.33.2]
# │   │   │   │   └── typing_extensions [required: >=4.6.0,!=4.7.0, installed: 4.14.1]
# │   │   │   ├── typing_extensions [required: >=4.12.2, installed: 4.14.1]
# │   │   │   └── typing-inspection [required: >=0.4.0, installed: 0.4.1]
# │   │   │       └── typing_extensions [required: >=4.12.0, installed: 4.14.1]
# │   │   ├── PyYAML [required: ==6.0.2, installed: 6.0.2]
# │   │   ├── requests [required: Any, installed: 2.32.4]
# │   │   │   ├── charset-normalizer [required: >=2,<4, installed: 3.4.2]
# │   │   │   ├── idna [required: >=2.5,<4, installed: 3.10]
# │   │   │   ├── urllib3 [required: >=1.21.1,<3, installed: 2.5.0]
# │   │   │   └── certifi [required: >=2017.4.17, installed: 2025.7.14]
# │   │   ├── ruamel.yaml [required: Any, installed: 0.18.14]
# │   │   │   └── ruamel.yaml.clib [required: >=0.2.7, installed: 0.2.12]
# │   │   ├── typing_extensions [required: Any, installed: 4.14.1]
# │   │   └── ujson [required: Any, installed: 5.10.0]
# │   ├── PyYAML [required: >=6, installed: 6.0.2]
# │   └── typing_extensions [required: >=4.12, installed: 4.14.1]
# └── paddlepaddle [required: Any, installed: 3.1.0]
#     ├── httpx [required: Any, installed: 0.28.1]
#     │   ├── anyio [required: Any, installed: 4.9.0]
#     │   │   ├── idna [required: >=2.8, installed: 3.10]
#     │   │   └── sniffio [required: >=1.1, installed: 1.3.1]
#     │   ├── certifi [required: Any, installed: 2025.7.14]
#     │   ├── httpcore [required: ==1.*, installed: 1.0.9]
#     │   │   ├── certifi [required: Any, installed: 2025.7.14]
#     │   │   └── h11 [required: >=0.16, installed: 0.16.0]
#     │   └── idna [required: Any, installed: 3.10]
#     ├── numpy [required: >=1.21, installed: 2.2.6]
#     ├── protobuf [required: >=3.20.2, installed: 6.31.1]
#     ├── pillow [required: Any, installed: 11.3.0]
#     ├── decorator [required: Any, installed: 5.2.1]
#     ├── opt-einsum [required: ==3.3.0, installed: 3.3.0]
#     │   └── numpy [required: >=1.7, installed: 2.2.6]
#     ├── networkx [required: Any, installed: 3.5]
#     └── typing_extensions [required: Any, installed: 4.14.1]
dependencies = [
    "django-ocr_translate>=0.7.0,<1.0",

    "paddleocr~=3.1.0",
    "paddlepaddle~=3.1.0",
]

[project.urls]
Source = "https://github.com/Crivella/ocr_translate-paddle"

[project.optional-dependencies]
release = [
    "flit",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-regressions"
]
pre-commit = [
    "pre-commit",
    "pylint",
    "pylint-pytest",
    "pylint-django",
]

[project.entry-points."ocr_translate.box_data"]
"box.paddle" = "ocr_translate_paddle:paddle_box_model_data"

[project.entry-points."ocr_translate.box_models"]
"paddle.box" = "ocr_translate_paddle.plugin:PaddleBOXModel"

[project.entry-points."ocr_translate.ocr_data"]
"ocr.paddle" = "ocr_translate_paddle:paddle_ocr_model_data"

[project.entry-points."ocr_translate.ocr_models"]
"paddle.ocr" = "ocr_translate_paddle.plugin:PaddleOCRModel"

[tool.flit.module]
name = "ocr_translate_paddle"

[tool.flit.sdist]
exclude = [
    ".gitignore", ".github", ".pre-commit-config.yaml",
    "tests/", "tests/*",
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "settings"
log_cli = true
pythonpath = ["./tests"]

[tool.pylint.main]
load-plugins = [
    "pylint_pytest"
]

[tool.pylint.messages_control]
disable = [
    "logging-fstring-interpolation",
    "global-statement",
    "broad-exception-caught",
    "too-few-public-methods",
]


[tool.pylint.format]
max-line-length = 120
good-names = [
    "_",
    "l", "r", "b", "t",
    "l1", "r1", "b1", "t1",
    "l2", "r2", "b2", "t2",
    "i", "j",
    "k", "v",
    "f", "X", "Y"
]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-attributes = 12
